# fastapi-jsonrpc

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.rst  README.src.rst  example1.py  example2.py  pyproject.toml  setup.py  zensical.toml
.github/workflows/: docs.yml  release.yml  tests-latest-fastapi-pydantic.yml  tests.yml
docs/: index.md  installation.md  llms-full.txt  llms.md  llms.txt  quickstart.md
docs/reference/: api.md  context.md  entrypoint.md  errors.md
docs/usage/: dependencies.md  errors.md  methods.md  middlewares.md  openapi.md  sentry.md  testing.md
fastapi_jsonrpc/: __init__.py
fastapi_jsonrpc/contrib/: __init__.py
fastapi_jsonrpc/contrib/pytest_plugin/: __init__.py  conftest.py
fastapi_jsonrpc/contrib/sentry/: __init__.py  http.py  integration.py  jrpc.py  test_utils.py
features/FEAT-0001-pytest-plugin-upgrade/: ARCHITECTURE.md  README.md
tests/: conftest.py  test_dependencies.py  test_dependencies_yield.py  test_handle_exception.py  test_http_auth.py  test_http_auth_shared_deps.py  test_http_exception.py  test_jsonrpc.py  test_jsonrpc_method.py  test_jsonrpc_request_id.py  test_lifespan.py  test_logging.py  test_merged_entrypoints.py  test_middlewares.py  test_middlewares_exc_enter.py  test_middlewares_exc_exit.py  test_notification.py  test_openapi.py  test_openapi_dependencies.py  test_openapi_security.py  test_openrpc.py  test_openrpc_type_keyword.py  test_params.py  test_pytest_plugin.py  test_request_class.py  test_sentry.py  test_sentry_sdk_1x.py  test_sentry_sdk_2x.py  test_shared_model.py  test_sub_response.py  test_utils.py
tests/sentry/: conftest.py  test_sentry_sdk_1x.py  test_sentry_sdk_2x.py  utils.py
