[tool.poetry]
name = "fastapi-jsonrpc"
version = "3.4.2"
description = "JSON-RPC server based on fastapi"
license = "MIT"
authors = ["Sergey Magafurov <magafurov@tochka.com>"]
readme = "README.rst"
repository = "https://github.com/smagafurov/fastapi-jsonrpc"
homepage = "https://github.com/smagafurov/fastapi-jsonrpc"
keywords = ['json-rpc', 'asgi', 'swagger', 'openapi', 'fastapi', 'pydantic', 'starlette']
exclude = ["example1.py", "example2.py"]

[tool.poetry.dependencies]
python = "^3.9"
aiojobs = ">=1.1.0"
fastapi = [
    {version = ">=0.112.4"},
    {version = "<0.123"},
]
pydantic = [
    {version = ">=2.7.0"},
    {version = "<3.0.0"},
]
starlette = ">0.0.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.0"
rst_include = "^2.1.0"
pytest = "^6.2"
sentry-sdk = "^2.0"
requests = ">0.0.0"
httpx = ">=0.27.0,<0.29.0"  # FastAPI/Starlette extra test deps

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
