[tool.poetry]
name = "fastapi-jsonrpc"
version = "3.4.2"
description = "JSON-RPC server based on fastapi"
license = "MIT"
authors = ["Sergey Magafurov <magafurov@tochka.com>"]
readme = "README.md"
repository = "https://github.com/smagafurov/fastapi-jsonrpc"
homepage = "https://github.com/smagafurov/fastapi-jsonrpc"
documentation = "https://smagafurov.github.io/fastapi-jsonrpc/"
keywords = ['json-rpc', 'asgi', 'swagger', 'openapi', 'fastapi', 'pydantic', 'starlette']
exclude = ["example1.py", "example2.py"]

[tool.poetry.dependencies]
python = "^3.10"
aiojobs = ">=1.1.0"
fastapi = [
    {version = ">=0.123"},
]
pydantic = [
    {version = ">=2.7.0"},
    {version = "<3.0.0"},
]
starlette = ">0.0.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.17.0"
pytest = "^9.0"
sentry-sdk = "^2.0"
requests = ">0.0.0"
httpx = ">=0.27.0,<0.29.0"  # FastAPI/Starlette extra test deps

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
zensical = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
