[project]
name = "fastapi-jsonrpc"
version = "3.4.2"
description = "JSON-RPC server based on fastapi"
license = "MIT"
authors = [
    {name = "Sergey Magafurov", email = "magafurov@tochka.com"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["json-rpc", "asgi", "swagger", "openapi", "fastapi", "pydantic", "starlette"]
dependencies = [
    "aiojobs>=1.1.0",
    "fastapi>=0.123,<0.135",  # 0.135 removed APIRoute.secure_cloned_response_field; compat fix pending
    "pydantic>=2.7.0,<3.0.0",
    "starlette<1.0.0",  # 1.0 removed add_event_handler; compat fix pending
]

[project.urls]
Homepage = "https://github.com/smagafurov/fastapi-jsonrpc"
Repository = "https://github.com/smagafurov/fastapi-jsonrpc"
Documentation = "https://smagafurov.github.io/fastapi-jsonrpc/"

[dependency-groups]
dev = [
    "uvicorn>=0.17.0,<0.18.0",
    "pytest>=9.0",
    "sentry-sdk>=2.0",
    "requests",
    "httpx>=0.27.0,<0.29.0",  # FastAPI/Starlette extra test deps
]
docs = [
    "zensical",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "example1.py",
    "example2.py",
]

[tool.hatch.build.targets.wheel]
packages = ["fastapi_jsonrpc"]
exclude = [
    "example1.py",
    "example2.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
